--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/PPH1.png" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Pak Premier Hospitality(Webside)</div>
+                                <div class="project-name">Pak Premier Hospitality(Website)</div>
                             </div>
                         </a>
                    
