--- a/index.html
+++ b/index.html
@@ -267,3 +267,149 @@
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Microsoft Teams Operator Connect Project</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .hero {
+            background-color: #0d6efd;
+            color: white;
+            padding: 80px 20px;
+            text-align: center;
+        }
+        .section {
+            padding: 60px 20px;
+        }
+        .section-title {
+            margin-bottom: 40px;
+            font-weight: bold;
+        }
+        .img-shadow {
+            box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+            border-radius: 10px;
+        }
+        footer {
+            background-color: #f8f9fa;
+            padding: 30px;
+            text-align: center;
+        }
+    </style>
+</head>
+
+<body>
+
+<!-- HERO SECTION -->
+<div class="hero">
+    <h1>Microsoft Teams Operator Connect Implementation</h1>
+    <p>Cloud Telephony Migration Project | 180 Users | Germany</p>
+</div>
+
+<!-- PROJECT OVERVIEW -->
+<div class="container section">
+    <h2 class="section-title text-center">Project Overview</h2>
+    <p>
+        This project involved migrating a legacy on-premise PBX system to 
+        Microsoft Teams Operator Connect to enable full cloud telephony.
+        The goal was to eliminate hardware infrastructure, improve remote work capabilities,
+        and centralize telephony management within Microsoft 365.
+    </p>
+</div>
+
+<!-- ARCHITECTURE -->
+<div class="container section">
+    <h2 class="section-title text-center">Solution Architecture</h2>
+    <div class="text-center">
+        <img src="assets/img/operator-architecture.png" class="img-fluid img-shadow" alt="Architecture Diagram">
+    </div>
+    <p class="mt-4">
+        Users connect through Microsoft 365 → Teams Phone → Operator Connect Provider → PSTN Network.
+        No Session Border Controller (SBC) was required.
+    </p>
+</div>
+
+<!-- IMPLEMENTATION PHASES -->
+<div class="container section">
+    <h2 class="section-title text-center">Implementation Phases</h2>
+
+    <h5>Phase 1 – Planning & Licensing</h5>
+    <ul>
+        <li>Assigned Microsoft 365 Business Premium licenses</li>
+        <li>Added Teams Phone licenses</li>
+        <li>Selected certified German Operator Connect provider</li>
+    </ul>
+
+    <h5>Phase 2 – Number Porting</h5>
+    <ul>
+        <li>Audited 120 Direct Inward Dial numbers</li>
+        <li>Coordinated porting process with telecom provider</li>
+        <li>Designed call routing plan</li>
+    </ul>
+
+    <h5>Phase 3 – Configuration</h5>
+    <ul>
+        <li>Configured Call Queues & Auto Attendants</li>
+        <li>Enabled voicemail policies</li>
+        <li>Configured emergency location policies</li>
+        <li>Applied MFA & Conditional Access</li>
+    </ul>
+
+    <div class="text-center mt-4">
+        <img src="assets/img/teams-admin-center.png" class="img-fluid img-shadow" alt="Teams Admin Center">
+    </div>
+</div>
+
+<!-- SECURITY -->
+<div class="container section">
+    <h2 class="section-title text-center">Security & Compliance</h2>
+    <ul>
+        <li>Multi-Factor Authentication enforced</li>
+        <li>Conditional Access policies applied</li>
+        <li>Call analytics monitoring enabled</li>
+        <li>Audit logging configured</li>
+    </ul>
+</div>
+
+<!-- RESULTS -->
+<div class="container section">
+    <h2 class="section-title text-center">Business Impact</h2>
+    <div class="row text-center">
+        <div class="col-md-4">
+            <h4>28%</h4>
+            <p>Cost Reduction</p>
+        </div>
+        <div class="col-md-4">
+            <h4>100%</h4>
+            <p>Cloud-Based Telephony</p>
+        </div>
+        <div class="col-md-4">
+            <h4>10 Min</h4>
+            <p>User Provisioning Time</p>
+        </div>
+    </div>
+
+    <div class="text-center mt-4">
+        <img src="assets/img/results-dashboard.png" class="img-fluid img-shadow" alt="Results Dashboard">
+    </div>
+</div>
+
+<!-- FOOTER -->
+<footer>
+    <p><strong>Muhammad Ahsan</strong></p>
+    <p>IT System Administrator | Microsoft 365 | Cloud & Security</p>
+</footer>
+
+</body>
+</html>
+
+
