--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@
                             <h3 class="h4 mb-2">Accomplishments / Project</h3>
                             <p class="text-muted mb-0">●Bring New CRM system (Bitrix24) with replacement of Asana CRM. Also provided training to users and Implementation</p><br>
                             <p class="text-muted mb-0">●Monitor Dashboard able to set KPI and Targets for staff and analysed the performance individually.<br/><br>
-                           <p class="text-muted mb-0">●	Financial Function System that helps the Account / Finance Team for payment and invoices.<br><br/>
+                            <p class="text-muted mb-0">●Financial Function System that helps the Account / Finance Team for payment and invoices.<br><br/>
+                            <p class="text-muted mb-0">●Microsoft Teams Operator Connect Implementation Project.<br><br/>
+                            <p class="text-muted mb-0">●Cloud Telephony Migration to Microsoft Teams Operator Connect.<br><br/>
+                            <p class="text-muted mb-0">● Business Goals - Eliminate on-prem PBX hardware - Enable remote workforce telephony - Reduce telecom maintenance cost- Improve scalability and call reliability - Centralize management in Teams Admin Center.<br><br/>
+                            <p class="text-muted mb-0">●Architecture: Users → Microsoft 365 → Teams Phone → Operator Connect Provider → PSTN Network .<br><br/>
+                            <p class="text-muted mb-0">●Implementation Phases - Planning & Licensing - Number Porting - Configuration - Pilot Deployment - Full Rollout.<br><br/>
                             <p class="text-muted mb-0">●Self-Back System Portal for clients for cashback system and rewards points for users</p><br>
                             <p class="text-muted mb-0">●Working on AWS Amazon (Quick Sight) & Bi-Tools reporting & Business Analysis.</p><br>
                             <p class="text-muted mb-0">●System Integration with 4 Types (Tracking Tag, Post-Back URL, API Reporting & Manual Insertion) Data Validation with different Tracker Platforms.<br><br/>
